# nr-app

./: .gitignore  .invenio.cfg  .travis.yml  MANIFEST.in  README.md  README.rst  docker-compose.yml  docker-services.yml  pyproject.toml  requirements.in  requirements.txt  run-tests.sh  setup.py
.github/workflows/: cron.yml  main.yml
development/: server.crt  server.key
docs/: conf.py  index.rst  instalace.rst  migrace.rst  troubleshooting.rst
docs/schemas/: communities-v1.0.0.html  fsm-record-v1.0.0.html  index.md  internal-v1.0.0.html  internal-v1.1.0.html  invenio-v1.0.0.html  multilingual-v2.0.0.html  records-files-v1.0.0.html  taxonomy-v2.0.0.html
invenio_nusl/: cli.py  version.py
invenio_nusl/data/: Institutions_ids.csv  code_aliases.json  code_field.json  code_programme.json  departments.json  document_typology_NUSL.csv  document_typology_RIV.csv  error_fields.json  faculties.csv  field_code.json  languages.csv  programme_code.json  studijni_obory.csv  studijni_obory_edit.csv
invenio_nusl/scripts/: data_unification.py  university_taxonomies.py
nr_app/: cli.py  config.py  index.py  indexer.py
nr_app/translations/: messages.pot
scripts/: collect_taxonomies.sh  create_community_records.py  set_initial_communities.py
scripts/database/: fix_level_taxonomy.py  fix_validation_err.py
scripts/sql/: replace_server_name.sql
tests/: test_make_multilang_list.py  test_scripts.py
