[tool]
[tool.poetry]
name = "nr-app"
version = "2.0.0a1"
description = "Czech National Repository app"
license = "MIT"
keywords = ["National", "Respository", "App", "REST", "REST API", "Invenio"]
classifiers = ["Environment :: Web Environment", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Programming Language :: Python", "Topic :: Internet :: WWW/HTTP :: Dynamic Content", "Topic :: Software Development :: Libraries :: Python Modules", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.7", "Development Status :: 3 - Planning"]
authors = ["Daniel Kopecký <Daniel.Kopecky@techlib.cz>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"
oarepo = "^3.3.0.4"
nr-all = { git = "https://github.com/Narodni-repozitar/nr-all.git", branch = "main" }
nr-taxonomies = { git = "https://github.com/Narodni-repozitar/nr-taxonomies.git" }
nr-oai-pmh-harvester = {git = "https://github.com/Narodni-repozitar/nr-oai-pmh-harvester.git", branch = "main"}
xmltodict = "^0.12.0"

[tool.poetry.extras]
tests = ["check-manifest", "coverage", "isort", "mock", "pydocstyle", "pytest", "pytest-cache", "pytest-cov", "pytest-invenio", "pytest-mock", "pytest-pep8", "pytest-random-order", "selenium"]
all = ["check-manifest", "coverage", "isort", "mock", "pydocstyle", "pytest", "pytest-cache", "pytest-cov", "pytest-invenio", "pytest-mock", "pytest-pep8", "pytest-random-order", "selenium", "sphinx"]
docs = ["sphinx"]


