[tool]
[tool.poetry]
name = "nr-app"
version = "2.0.0a4"
description = "Czech National Repository app"
license = "MIT"
keywords = ["National", "Respository", "App", "REST", "REST API", "Invenio"]
classifiers = ["Environment :: Web Environment", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Programming Language :: Python", "Topic :: Internet :: WWW/HTTP :: Dynamic Content", "Topic :: Software Development :: Libraries :: Python Modules", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.7", "Development Status :: 3 - Planning"]
authors = ["Daniel Kopecký <Daniel.Kopecky@techlib.cz>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"
oarepo = "^3.3.0.4"
oarepo-micro-api = "^3.3.53"
oarepo-validate = "^1.0.0"
oarepo-references = "^1.11.1"
oarepo-mapping-includes = "<=1.2.0"
oarepo-records-draft = "^5.5.5"
oarepo-iiif = "^1.1.4"
oarepo-ui = "^2.0"
oarepo-whitenoise = "^1.0.0"
techlib-nr-all = { version = "^1.0.0a5", allow-prereleases = true }
xmltodict = "^0.12.0"
tqdm = "^4.57.0"
oarepo-taxonomies = { version = "^3.0.0-alpha.1", allow-prereleases = true }
oarepo-invenio-model = "^2.1.2"
oarepo-multilingual = ">=2.4.3"
oarepo-fsm = "^1.5.0"
oarepo-communities = "^2.0.0"
techlib-nr-oai-pmh-harvester = "^1.0.0-alpha.8"

[tool.poetry.extras]
tests = ["check-manifest", "coverage", "isort", "mock", "pydocstyle", "pytest", "pytest-cache", "pytest-cov", "pytest-invenio", "pytest-mock", "pytest-pep8", "pytest-random-order", "selenium"]
all = ["check-manifest", "coverage", "isort", "mock", "pydocstyle", "pytest", "pytest-cache", "pytest-cov", "pytest-invenio", "pytest-mock", "pytest-pep8", "pytest-random-order", "selenium", "sphinx"]
docs = ["sphinx"]

[tool.poetry.plugins."invenio_config.module"]
restoration = "nr_app.config"

[tool.poetry.plugins.'flask.commands']
'nr' = 'nr_app.cli:nr'

[tool.poetry.plugins."invenio_base.api_apps"]
invenio_i18n = "invenio_i18n:InvenioI18N"


